RESOLVED FIXED302079
[GTK][WPE] REGRESSION(301378@main): RunLoop::stop() might not take effect
https://bugs.webkit.org/show_bug.cgi?id=302079
Summary [GTK][WPE] REGRESSION(301378@main): RunLoop::stop() might not take effect
Nikolas Zimmermann
Reported 2025-11-06 05:15:13 PST
After 301378@main, RunLoop::stop() wouldn't guarantee any action anymore for the GLib based ports. When the RunLoop is currently polling (with MayBlock::Yes, and a typically large timeout), then RunLoop::stop() wouldn't interrupt the poll() anymore. g_main_loop_quit() used to wake the run loop, to break those long polling iterations -- let's do the same.
Attachments
Nikolas Zimmermann
Comment 1 2025-11-06 05:16:52 PST
EWS
Comment 2 2025-11-06 08:04:33 PST
Committed 302655@main (7130054a1695): <https://commits.webkit.org/302655@main> Reviewed commits have been landed. Closing PR #53519 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.