[GTK][WPE] REGRESSION(301378@main): RunLoop::stop() might not take effect https://bugs.webkit.org/show_bug.cgi?id=302079

Reviewed by Carlos Garcia Campos.

After 301378@main, RunLoop::stop() wouldn't guarantee any action anymore
for the GLib based ports. When the RunLoop is currently polling
(with MayBlock::Yes, and a typically large timeout), then
RunLoop::stop() wouldn't interrupt the poll() anymore. g_main_loop_quit()
used to wake the run loop, to break those long polling iterations -- let's
do the same.

Covered by existing tests.

* Source/WTF/wtf/glib/RunLoopGLib.cpp:
(WTF::RunLoop::stop):

Canonical link: https://commits.webkit.org/302655@main